--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
+        <meta
+            http-equiv="Permissions-Policy"
+            content="geolocation=(), microphone=(), camera=(), fullscreen=(), payment=(), interest-cohort=()"
+        />
+
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Customize Btn</title>
